# kerrax

./: .gitignore  README.md
KrxImpExp/: CMakeLists.txt
KrxImpExp/b/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  IPhysique.sln  IPhysiqueLib.vcxproj  IPhysiqueLib.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
KrxImpExp/mysrc/IPhysique/: PhyExport.def
KrxImpExp/mysrc/Meta/: File.cpp  FormatMsg.cpp
KrxImpExp/mysrc/MetaMaxSdk/: .MetaMaxSdk_Object.h.swp
KrxImpExp/src/IPhysique/: PhyExport.cpp  PhyExport.def
KrxImpExp/src/MetaCpp/: .MetaCpp_Class.h.swp  MetaCpp.h  MetaCpp_Bit.h  MetaCpp_File.h  MetaCpp_NumConv.h  MetaCpp_String.h  MetaCpp_System.h
KrxImpExp/src/MetaMaxSdk/: MetaMaxSdk.h  MetaMaxSdk_Bone.h  MetaMaxSdk_Importer.h  MetaMaxSdk_Material.h  MetaMaxSdk_Mesh.h  MetaMaxSdk_Object.h  MetaMaxSdk_Progress.h  MetaMaxSdk_Skin.h  MetaMaxSdk_StdDirs.h  MetaMaxSdk_Unit.h
KrxImpExp/src/wxImpExpUI/: StdHeaders.h
KrxImpExp/src_old/IPhysique/: PublishedInterface.cpp  StdHeaders.h
wxWidgets-2.8.12/: build.bat  build.sh
wxWidgets-2.8.12/lib/vc_lib/: wxbase28ud_net.lib  wxbase28ud_xml.lib  wxexpatd.lib  wxjpegd.lib  wxmsw28ud_aui.lib  wxmsw28ud_media.lib  wxmsw28ud_qa.lib  wxpngd.lib  wxregexud.lib  wxtiffd.lib  wxzlibd.lib
wxWidgets-2.8.12/lib/vc_lib/mswud/: build.cfg
